--- a/app/src/main/res/layout/activity_delete.xml
+++ b/app/src/main/res/layout/activity_delete.xml
@@ -61,7 +61,7 @@
         android:drawableLeft="@drawable/id"
         android:drawablePadding="10dp"
         android:fontFamily="casual"
-        android:hint="Product"
+        android:hint="Product ID"
         android:textColor="@color/black"
         android:paddingLeft="7dp"
         android:paddingRight="20sp"
