--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -174,7 +174,7 @@
                 android:id="@+id/ProductID"
                 android:layout_width="340dp"
                 android:layout_height="match_parent"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="20dp"
                 android:background="@drawable/edit_text"
                 android:drawableLeft="@drawable/id"
                 android:drawablePadding="10dp"
@@ -183,6 +183,7 @@
                 android:padding="10dp"
                 android:paddingLeft="7dp"
                 android:paddingRight="20sp"
+                android:textColor="@color/black"
                 android:textSize="20dp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
